map and spacing fix

--- a/style.css
+++ b/style.css
@@ -434,9 +434,9 @@ header img{width: 100%;
 .about-page h2::after{content: "";width: 70px;height: 3px;background: #d09920;display: block;}
 .about-page p{margin-bottom: 30px;}
 
-.about-page .gallery{display: flex;margin: 0 -4px;flex-wrap: wrap;}
-.about-page .gallery a{ display: block;padding: 4px;width: 25%;max-height: 200px;border-radius: 8px;overflow: hidden;}
-.about-page .gallery img{width: 100%;height: 100%;object-fit: cover;border-radius: 8px;overflow: hidden;}
+.about-page .lightbox{display: flex;margin: 0 -4px;flex-wrap: wrap;margin-bottom: 40px;}
+.about-page .lightbox a{ display: block;padding: 4px;width: 25%;max-height: 200px;border-radius: 8px;overflow: hidden;}
+.about-page .lightbox img{width: 100%;height: 100%;object-fit: cover;border-radius: 8px;overflow: hidden;}
   @media (max-width: 599px) {
     .container.about-page{padding: 30px 16px;margin-top: 174px;}
     .about-page .gallery a{width: 33.33%;}
